Refactor HTML for improved readability and consistency

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quantum Serve Solutions | Customer Billing Excellence</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <header class="hero">
         <nav class="nav">
@@ -28,7 +31,9 @@
                 <span class="eyebrow">Customer Billing Responsibility</span>
                 <h1>Elevate Your Billing Operations with Precision, Insight &amp; Care</h1>
                 <p>
-                    QSS partners with finance leaders to deliver accurate, timely invoicing, actionable analytics and confident revenue control. We bring an experienced team, disciplined governance and a relentless commitment to your success.
+                    QSS partners with finance leaders to deliver accurate, timely invoicing, actionable analytics and
+                    confident revenue control. We bring an experienced team, disciplined governance and a relentless
+                    commitment to your success.
                 </p>
                 <div class="hero-actions">
                     <a class="primary" href="#services">Explore Services</a>
@@ -40,7 +45,8 @@
                     <p class="subtitle">Billing Excellence Snapshot</p>
                     <h2>99%+ Accuracy</h2>
                     <p>
-                        Our service delivery model blends people, process and technology to transform billing into a strategic advantage.
+                        Our service delivery model blends people, process and technology to transform billing into a
+                        strategic advantage.
                     </p>
                 </div>
                 <div class="card-bottom">
@@ -67,14 +73,16 @@
                 <span class="eyebrow">What We Deliver</span>
                 <h2>End-to-End Customer Billing Services</h2>
                 <p>
-                    We serve as an extension of your finance team, combining hands-on execution with analytics that accelerate cash flow and reduce risk.
+                    We serve as an extension of your finance team, combining hands-on execution with analytics that
+                    accelerate cash flow and reduce risk.
                 </p>
             </div>
             <div class="grid">
                 <article class="card">
                     <h3>Invoice Management</h3>
                     <p>
-                        Prepare, validate and issue invoices with accuracy. We reconcile billing data against contracts, purchase orders and delivery milestones to eliminate errors before they reach your customers.
+                        Prepare, validate and issue invoices with accuracy. We reconcile billing data against contracts,
+                        purchase orders and delivery milestones to eliminate errors before they reach your customers.
                     </p>
                     <ul>
                         <li>Contract &amp; PO validation</li>
@@ -85,7 +93,8 @@
                 <article class="card">
                     <h3>Analytics &amp; Visibility</h3>
                     <p>
-                        Transform billing data into executive-ready dashboards. Gain clarity on profitability, volume trends, dispute hotspots and SLA performance in a single source of truth.
+                        Transform billing data into executive-ready dashboards. Gain clarity on profitability, volume
+                        trends, dispute hotspots and SLA performance in a single source of truth.
                     </p>
                     <ul>
                         <li>Billing health dashboards</li>
@@ -96,7 +105,8 @@
                 <article class="card">
                     <h3>Revenue Assurance</h3>
                     <p>
-                        Ensure completeness of every invoice cycle. From reconciliation to credit/rebill management, our controls safeguard revenue and accelerate dispute resolution.
+                        Ensure completeness of every invoice cycle. From reconciliation to credit/rebill management, our
+                        controls safeguard revenue and accelerate dispute resolution.
                     </p>
                     <ul>
                         <li>Completeness checks</li>
@@ -116,34 +126,40 @@
                 <div class="column">
                     <h3>Integrated Expertise</h3>
                     <p>
-                        Our finance, accounting and process design specialists have led complex global programs. The same experts designing your roadmap are the ones partnering with you day-to-day.
+                        Our finance, accounting and process design specialists have led complex global programs. The
+                        same experts designing your roadmap are the ones partnering with you day-to-day.
                     </p>
                 </div>
                 <div class="column">
                     <h3>Collaborative Partnership</h3>
                     <p>
-                        We embed within your teams, align with your cadence and ensure rapid response to data requests. Transparent communication keeps stakeholders aligned at every milestone.
+                        We embed within your teams, align with your cadence and ensure rapid response to data requests.
+                        Transparent communication keeps stakeholders aligned at every milestone.
                     </p>
                 </div>
                 <div class="column">
                     <h3>Change-Ready Governance</h3>
                     <p>
-                        From steering committees to executive sponsors, we establish clear escalation paths, decision rights and review cycles that keep delivery predictable and proactive.
+                        From steering committees to executive sponsors, we establish clear escalation paths, decision
+                        rights and review cycles that keep delivery predictable and proactive.
                     </p>
                 </div>
             </div>
             <div class="pillars">
                 <div class="pillar">
                     <span class="pillar-title">People</span>
-                    <p>Dedicated invoicing SMEs, process leads and executive oversight ensure accountability and continuity.</p>
+                    <p>Dedicated invoicing SMEs, process leads and executive oversight ensure accountability and
+                        continuity.</p>
                 </div>
                 <div class="pillar">
                     <span class="pillar-title">Process</span>
-                    <p>Documented validation checklists, SLA playbooks and continuous improvement loops drive consistent excellence.</p>
+                    <p>Documented validation checklists, SLA playbooks and continuous improvement loops drive consistent
+                        excellence.</p>
                 </div>
                 <div class="pillar">
                     <span class="pillar-title">Technology</span>
-                    <p>Secure access to your ERP, analytics accelerators and automation opportunities unlock scalable growth.</p>
+                    <p>Secure access to your ERP, analytics accelerators and automation opportunities unlock scalable
+                        growth.</p>
                 </div>
             </div>
         </section>
@@ -161,33 +177,34 @@
             <div class="section-header">
                 <span class="eyebrow">Leadership</span>
                 <h2>Meet the Team Steering Quantum Serve Solutions</h2>
-                <p>Our leaders blend decades of operations excellence with an obsession for elevating client experiences.</p>
+                <p>Our leaders blend decades of operations excellence with an obsession for elevating client
+                    experiences.</p>
             </div>
             <div class="team-grid">
                 <article class="team-card">
                     <span class="team-role">Chief Executive Officer</span>
                     <h3>Ashok Srivastav</h3>
                     <p>
-                        Ashok shapes the Quantum Serve vision and ensures every engagement delivers measurable value for finance
+                        Ashok shapes the Quantum Serve vision and ensures every engagement delivers measurable value for
+                        finance
                         leaders navigating complex billing environments.
                     </p>
-                    <a class="team-link" href="https://www.linkedin.com/in/ashoksrivastav/" target="_blank" rel="noreferrer">
+                    <a class="team-link" href="https://www.linkedin.com/in/ashoksrivastav/" target="_blank"
+                        rel="noreferrer">
                         Connect on LinkedIn
                     </a>
                 </article>
                 <article class="team-card">
                     <span class="team-role">Chief Technology Officer</span>
-                    <h3>Utsav K.</h3>
+                    <h3>Utsav Kattel</h3>
                     <p>
-                        Utsav leads our technology strategy, pairing automation opportunities with pragmatic delivery to keep
+                        Utsav leads our technology strategy, pairing automation opportunities with pragmatic delivery to
+                        keep
                         your billing operations adaptive and insight-driven.
                     </p>
-                    <a class="team-link" href="https://www.linkedin.com/in/utsav-k-54883a235/" target="_blank" rel="noreferrer">
-                        LinkedIn Profile (currently being expanded)
-                    </a>
                 </article>
             </div>
-            <p class="team-note">More leadership bios are on the way as we continue to grow the team.</p>
+
         </section>
 
         <section id="governance" class="section governance">
@@ -198,7 +215,8 @@
             <div class="governance-grid">
                 <div class="governance-card">
                     <h3>Leadership Alignment</h3>
-                    <p>Executive sponsors from both QSS and your organization align priorities, address risks and unlock decisions quickly.</p>
+                    <p>Executive sponsors from both QSS and your organization align priorities, address risks and unlock
+                        decisions quickly.</p>
                     <ul>
                         <li>Steering committee reviews</li>
                         <li>Quarterly business insights</li>
@@ -207,7 +225,8 @@
                 </div>
                 <div class="governance-card">
                     <h3>Operating Rhythm</h3>
-                    <p>Weekly working sessions, monthly SLA reviews and quarterly improvement workshops keep progress transparent.</p>
+                    <p>Weekly working sessions, monthly SLA reviews and quarterly improvement workshops keep progress
+                        transparent.</p>
                     <ul>
                         <li>Weekly exception reports</li>
                         <li>Monthly SLA dashboards</li>
@@ -216,7 +235,8 @@
                 </div>
                 <div class="governance-card">
                     <h3>Collaboration Commitments</h3>
-                    <p>Rapid access to data, timely approvals and shared accountability ensure the roadmap stays on schedule.</p>
+                    <p>Rapid access to data, timely approvals and shared accountability ensure the roadmap stays on
+                        schedule.</p>
                     <ul>
                         <li>Secure remote delivery</li>
                         <li>Cloud-first collaboration</li>
@@ -275,7 +295,8 @@
         <section class="section cta-band">
             <div class="cta-content">
                 <h2>Ready to strengthen billing performance?</h2>
-                <p>Let’s discuss how Quantum Serve Solutions can accelerate invoicing, improve analytics and protect your revenue.</p>
+                <p>Let’s discuss how Quantum Serve Solutions can accelerate invoicing, improve analytics and protect
+                    your revenue.</p>
                 <a class="primary" href="#contact">Schedule a Discovery Call</a>
             </div>
         </section>
@@ -289,7 +310,8 @@
             <div class="contact-grid">
                 <div>
                     <h3>Contact</h3>
-                    <p>Email: <a href="mailto:contact@QuantumServeSolutions.com">contact@QuantumServeSolutions.com</a></p>
+                    <p>Email: <a href="mailto:contact@QuantumServeSolutions.com">contact@QuantumServeSolutions.com</a>
+                    </p>
                     <p>Address: Glastonbury, CT</p>
                 </div>
                 <form id="contact-form" class="contact-form" novalidate>
@@ -307,7 +329,8 @@
                     </div>
                     <div class="form-field">
                         <label for="message">How can we help?</label>
-                        <textarea id="message" name="message" rows="4" placeholder="Tell us about your billing goals"></textarea>
+                        <textarea id="message" name="message" rows="4"
+                            placeholder="Tell us about your billing goals"></textarea>
                     </div>
                     <button type="submit" class="primary">Submit Inquiry</button>
                     <p id="contact-status" class="contact-status" role="status" aria-live="polite"></p>
@@ -398,4 +421,5 @@
         }
     </script>
 </body>
+
 </html>
