Add .DS_Store files to src and src/com directories

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 <body>
     <header class="hero">
         <nav class="nav">
-            <div class="logo">Quantum Serve Solutions</div>
+            <div class="logo">
+                <img src="qss-logo-web-200.png" alt="QSS Logo" class="logo-img">
+                <span class="logo-text">Quantum Serve Solutions</span>
+            </div>
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#approach">Approach</a></li>
