Remove unused action attribute from contact form for improved clarity

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 </div>
 
                 <!-- Contact form -->
-                <form id="contact-form" class="contact-form" novalidate method="POST" action="">
+                <form id="contact-form" class="contact-form" novalidate>
                     <div class="form-field">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" placeholder="Your name" required />
