Add structured data for SEO and accessibility improvements

--- a/index.html
+++ b/index.html
@@ -37,9 +37,54 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Quantum Serve Solutions",
+        "alternateName": "QSS",
+        "url": "https://quantumservesolutions.com",
+        "logo": "https://quantumservesolutions.com/qss-logo-web-200.png",
+        "description": "Customer billing excellence with 99%+ accuracy, T+2 day turnaround, and <1% dispute rate. End-to-end billing services for finance leaders.",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Glastonbury",
+            "addressRegion": "CT",
+            "addressCountry": "US"
+        },
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "email": "contact@QuantumServeSolutions.com",
+            "contactType": "customer service"
+        },
+        "founder": [
+            {
+                "@type": "Person",
+                "name": "Ashok Srivastav",
+                "jobTitle": "Chief Executive Officer"
+            },
+            {
+                "@type": "Person", 
+                "name": "Utsav Kattel",
+                "jobTitle": "Chief Technology Officer"
+            }
+        ],
+        "service": [
+            "Invoice Management",
+            "Analytics & Visibility", 
+            "Revenue Assurance",
+            "Customer Billing Services"
+        ]
+    }
+    </script>
 </head>
 
 <body>
+    <!-- Skip to main content for accessibility -->
+    <a href="#main" class="skip-link">Skip to main content</a>
+
     <header class="hero">
         <nav class="nav">
             <div class="logo">
@@ -86,7 +131,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="main">
         <section id="services" class="section services">
             <div class="section-header">
                 <span class="eyebrow">What We Deliver</span>
