Update contact section to improve clarity and user guidance

--- a/index.html
+++ b/index.html
@@ -351,10 +351,9 @@
             </div>
             <div class="contact-grid">
                 <div>
-                    <h3>Contact</h3>
-                    <p>Email: <a href="mailto:contact@QuantumServeSolutions.com">contact@QuantumServeSolutions.com</a>
-                    </p>
-                    <p>Address: Glastonbury, CT</p>
+                    <h3>Contact Information</h3>
+                    <p>Use the form to send us a message and we'll get back to you within 24 hours.</p>
+                    <p>Location: Glastonbury, CT</p>
                 </div>
 
                 <!-- Contact form -->
